--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body {
     font-family: cursive;
     margin: 0;
-    padding: 0.2px 0.2px 0.2px 0.8px;
+    padding: 0;
     background-color: #ebb1b1;
     color: #333;
     line-height: 1.6;
@@ -15,7 +15,7 @@ body {
 }
 
 .section {
-    padding: 60px 0;
+    padding: 60px 0 60px 5px;
 }
 
 /* Header */
